<resources>
    <string name="app_name" translatable="false">An Italian Restaurant</string>
    <string name="action_settings" translatable="false">Cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">Main Menu</string>
    <string name="second_fragment_label" translatable="false">Antipasto Menu</string>
    <string name="steak_label" translatable="false">Steak Menu</string>
    <string name="tiramisu_label" translatable="false">Tiramisu Menu</string>
    <string name="fresh_pasta_label" translatable="false">Fresh Pasta Menu</string>
    <string name="pizza_label" translatable="false">Pizza Menu</string>
    <string name="main_menu" translatable="false">Main Menu</string>
    <string name="vegan" translatable="false">Vegan</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="highest_rating" translatable="false">Highest Rating</string>
    <string name="maximum_price" translatable="false">Maximum Price</string>
    <string name="minimum_price" translatable="false">Minimum Price</string>
    <string name="lowest_rating" translatable="false">Lowest Rating</string>
    <string name="lowest_delivery_time" translatable="false">Lowest Delivery Time</string>
    <string name="high_delivery_time" translatable="false">High Delivery Time</string>
    <string name="high_fees" translatable="false">High Fees</string>
    <string name="low_fees" translatable="false">Low Fees</string>
    <string name="junction" translatable="false">-</string>
    <string name="quantity" translatable="false">Quantity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="restaurant_items">Restaurant Items</string>
    <!-- Menus -->
    <string name="steak">Steak</string>
    <string name="pasta">Pasta</string>
    <string name="fresh_pasta">Fresh Pasta</string>
    <string name="tiramisu">Tiramisù</string>
    <string name="antipasto">Antipasto</string>
    <string name="pizza">Pizza</string>
    <string name="potato">Potato</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <!-- Antipasto -->
    <string name="bruschetta">Bruschetta</string>
    <string name="melon">Melon and Prosciutto</string>
    <string name="anti_cheese">Mozzarina di Bufala</string>
    <string name="olives">Marinated Cheese and Olives</string>
    <!-- Steak -->
    <string name="bistecca">Bistecca alla Fiorentina</string>
    <string name="tagliata">Tagliata</string>
    <string name="palermo">Palermo Style</string>
    <!-- Pasta -->
    <string name="trofie">Trofie</string>
    <string name="chitarra">Chitarra</string>
    <string name="ravioli">Raviolo al\'Uovo</string>
    <!-- Pizza -->
    <string name="napoletana">Napoletana</string>
    <string name="alla_pala">Alla Pala</string>
    <string name="tonda">Tonda Romana</string>
    <string name="taglio">Al Taglio</string>
    <string name="fritta">Fritta</string>
    <string name="padellino">Al Padellino</string>
    <string name="siciliana">Siciliana</string>
    <!-- Tiramisu -->
    <string name="classic">Classic Tiramisù</string>
    <string name="deconst">Deconstructed Tiramisù</string>
    <string name="cheese_cake">Cheese Cake Tiramisù</string>
    <string name="gelato">Tiramisù Gelato</string>
    <!-- Strings related to login -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dollar">$</string>
    <string name="how_many">Qty.</string>
    <string name="cancel_it">This is a cancellation</string>
    <string name="title_activity_cart">Cart</string>
    <string name="cart_activity">Item List</string>
    <string name="cart">Cart</string>
    <string name="cart_value">Cart Value: 0.00 <b>$</b></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cleared_cart">You\'ve removed every items from the cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="close">Close</string>
    <string name="steak_menu">Steak Menu</string>
    <string name="frestpasta">Fresh Pasta Menu</string>
    <string name="tiramenu">Tiramisu Menu</string>
    <string name="pizza_menu">Pizza Menu</string>
    <string name="exit_button">Exit Button</string>

    <string name="element">Element</string>
    <string name="cart_val_void">Cart Value:</string>

    <string name="itemname">Item</string>
    <string name="clear">Clear</string>
    <string name="list">List</string>
    <string name="back">Back</string>

    <string name="title_activity_cart_tab">Cart and Items list</string>
    <string name="tab_text_1">Items</string>
    <string name="tab_text_2">Cart</string>
    <string name="options">Options</string>
    <string name="item_cost">Item Cost</string>
    <string name="total">Total</string>
    <string name="empty_cart">The Cart is Empty : 0.00$</string>
    <string name="home">Home</string>
    <!-- Item Removal AlertDialog -->
    <string name="item_removal_dialog">Item to Remove:</string>
    <string name="item_removal_total">For a total amount of:</string>
    <string name="accept">Accept</string>
    <string name="item_removal_text">You are about to remove</string>
    <string name="item_removal_costing">Costing</string>
    <string name="each">each.</string>
    <string name="item_removed">was removed</string>
    <string name="remove">Remove</string>
</resources>