<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".menus.AntiPasto">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/firstItemAnti"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:text="@string/bruschetta"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/secondItemAnti"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:backgroundTintMode="screen"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:text="@string/melon"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/thirdItemAnti"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:text="@string/anti_cheese"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/fourthItemAnti"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:text="@string/olives"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>