<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".menus.FreshPastaFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/firstItemPasta"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/trofie"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/secondItemPasta"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:backgroundTintMode="screen"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/chitarra"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/thirdItemPasta"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/ravioli"
            android:textColor="@color/white"
            android:textSize="25sp" />
        
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>